<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
        <string name="app_name">EducationalApp</string>
        <string name="title">WELCOME TO PURIM QUIZ!! </string>
        <string name="Thank_You"> תודה רבה !</string>
        <string name="question1"> 1. Who commanded that Purim was to be celebrated dy Jews every year ?</string>
        <string name="answer1"> King Xerxes</string>
        <string name="answer2"> Mordecai</string>
        <string name="answer3"> Queen Ester</string>
        <string name="question2"> 2.How many sons did Haman have ?</string>
        <string name="answer4"> Ten</string>
        <string name="answer5"> Twelve</string>
        <string name="answer6"> Eight</string>
        <string name="question3"> 3.What was the name of Haman wife ?</string>
        <string name="answer7"> Teresh </string>
        <string name="answer8"> Zelda </string>
        <string name="answer9"> Zeresh </string>
        <string name="question4"> 4. What is King Xerxes full name in Aramaic ? </string>
        <string name="answer10"> Achashverosh</string>
        <string name="answer11"> Ahaserus</string>
        <string name="answer12"> Ahavernosh</string>
        <string name="enter_your_name">hii  <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>

